added the html structure

--- a/index.html
+++ b/index.html
@@ -26,5 +26,51 @@
   </head>
 
   <body>
+    <section>
+      <h1>Olá, meu nome é <strong>Osmar Alves</strong></h1>
+      <p>Sou desenvolvedor back-end (PHP, Ruby)<br />e front-end (HTML,CSS e Javascript),<br />entusiasta da simplicidade e perfeccionismo.</p>
+      <nav>
+        <ul>
+          <li><a href="#" title="Portfolio">Portfolio</a></li>
+          <li><a href="http://linkedin.com/in/osmaralves" title="Currírulo no Linkedin">Linkedin</a></li>
+          <li><a href="mailto:osmar.wd@gmail.com" title="Gmail">Gmail</a></li>
+          <li><a href="http://twitter.com/osmarAlvesWeb" title="Twitter">Twitter</a></li>
+        </ul>
+      </nav>
+      
+      <div id="portfolio">
+        <ul>
+          <li>
+            <a href="http://demo.osmaralves.com/geserv/" title="Geserv (Ruby, Rails, HTML, CSS, jQuery)" target="_blank">
+              <img src="public/images/geserv.png" alt="Geserv">
+            </a>
+          </li>
+
+          <li>
+            <a href="http://www.projeluz.com.br/" title="Projeluz Iluminação (PHP, WordPress, HTML, CSS, jQuery)" target="_blank">
+              <img src="public/images/projeluz.png" alt="Projeluz Iluminação">
+            </a>
+          </li>
+
+          <li>
+            <a href="http://www.objetivoparanavai.com.br/" title="Colégio Objetivo (PHP, WordPress, HTML, CSS)" target="_blank">
+              <img src="public/images/objetivo.png" alt="Colégio Objetivo">
+            </a>
+          </li>
+
+          <li>
+            <a href="http://santuariodocarmo.org.br/" title="Santuário do Carmo (PHP, WordPress, HTML, CSS, jQuery)" target="_blank">
+              <img src="public/images/santuariodocarmo.png" alt="Santuário do Carmo">
+            </a>
+          </li>
+
+          <li>
+            <a href="http://melquiadesgrill.com.br/" title="Restaurante Melquiades Grill (PHP, HTML, CSS)" target="_blank">
+              <img src="public/images/melquiadesgrill.png" alt="Restaurante Melquiades Grill">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
