--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta name="robots" content="index, follow">
     <!-- /SEO Tag's -->
 
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu:regular,bold' rel='stylesheet' type='text/css'>
+
     <!-- Stylesheet's' -->
     <link rel="stylesheet" href="public/stylesheets/reset.css">
     <link rel="stylesheet" href="public/stylesheets/main.css">
