corrected the portfolio link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p>Sou desenvolvedor back-end (PHP, Ruby)<br />e front-end (HTML,CSS e Javascript),<br />entusiasta da simplicidade e perfeccionismo.</p>
       <nav>
         <ul>
-          <li><a href="#" title="Portfolio" target="_blank" id="portfolioLink">Portfolio</a></li>
+          <li><a href="#portfolio" title="Portfolio" target="_blank" id="portfolioLink" rel="nofollow">Portfolio</a></li>
           <li><a href="http://linkedin.com/in/osmaralves" target="_blank" title="Currírulo no Linkedin">Linkedin</a></li>
           <li><a href="mailto:osmar.wd@gmail.com" title="Gmail" target="_blank">Gmail</a></li>
           <li><a href="http://twitter.com/osmarAlvesWeb" title="Twitter" target="_blank">Twitter</a></li>
