added nofollow to portfolio links

--- a/index.html
+++ b/index.html
@@ -44,31 +44,31 @@
       <div id="portfolio">
         <ul>
           <li>
-            <a href="http://demo.osmaralves.com/geserv/" title="Geserv (Ruby, Rails, HTML, CSS, jQuery)" target="_blank">
+            <a href="http://demo.osmaralves.com/geserv/" title="Geserv (Ruby, Rails, HTML, CSS, jQuery)" target="_blank" rel="nofollow">
               <img src="public/images/geserv.png" alt="Geserv">
             </a>
           </li>
 
           <li>
-            <a href="http://www.projeluz.com.br/" title="Projeluz Iluminação (PHP, WordPress, HTML, CSS, jQuery)" target="_blank">
+            <a href="http://www.projeluz.com.br/" title="Projeluz Iluminação (PHP, WordPress, HTML, CSS, jQuery)" target="_blank" rel="nofollow">
               <img src="public/images/projeluz.png" alt="Projeluz Iluminação">
             </a>
           </li>
 
           <li>
-            <a href="http://www.objetivoparanavai.com.br/" title="Colégio Objetivo (PHP, WordPress, HTML, CSS)" target="_blank">
+            <a href="http://www.objetivoparanavai.com.br/" title="Colégio Objetivo (PHP, WordPress, HTML, CSS)" target="_blank" rel="nofollow">
               <img src="public/images/objetivo.png" alt="Colégio Objetivo">
             </a>
           </li>
 
           <li>
-            <a href="http://santuariodocarmo.org.br/" title="Santuário do Carmo (PHP, WordPress, HTML, CSS, jQuery)" target="_blank">
+            <a href="http://santuariodocarmo.org.br/" title="Santuário do Carmo (PHP, WordPress, HTML, CSS, jQuery)" target="_blank" rel="nofollow">
               <img src="public/images/santuariodocarmo.png" alt="Santuário do Carmo">
             </a>
           </li>
 
           <li>
-            <a href="http://melquiadesgrill.com.br/" title="Restaurante Melquiades Grill (PHP, HTML, CSS)" target="_blank">
+            <a href="http://melquiadesgrill.com.br/" title="Restaurante Melquiades Grill (PHP, HTML, CSS)" target="_blank" rel="nofollow">
               <img src="public/images/melquiadesgrill.png" alt="Restaurante Melquiades Grill">
             </a>
           </li>
