added the seo meta tags

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- /Compatibilidade -->
 
     <!-- SEO Tag's -->
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Desenvolvedor back-end (PHP, Ruby) e front-end (HTML,CSS e Javascript), entusiasta da simplicidade e perfeccionismo.">
+    <meta name="keywords" content="desenvolvedor web, back-end, front-end, php, ruby, html, css, javascript, ruby on rails, rails, wordpress, jquery, sites, portais, sistemas">
     <meta name="robots" content="index, follow">
     <!-- /SEO Tag's -->
 
