--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <!-- Compatibilidade -->
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="language" content="pt-br">
     <!-- /Compatibilidade -->
 
@@ -21,12 +21,12 @@
     <link rel="stylesheet" href="public/stylesheets/reset.css">
     <link rel="stylesheet" href="public/stylesheets/main.css">
     <link rel="stylesheet" href="public/vendor/tipsy/stylesheets/tipsy.css">
-    <!-- /Stylesheet's' --> 
- 
+    <!-- /Stylesheet's' -->
+
     <!--[if lt IE 9]>
-      <script src="public/scripts/html5.js"></script>
-    <![endif]-->
-  </head>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->  
+</head>
 
   <body>
     <section>
@@ -42,6 +42,7 @@
       </nav>
       
       <div id="portfolio">
+        <span class="pointer"></span>
         <ul>
           <li>
             <a href="http://demo.osmaralves.com/geserv/" title="Geserv (Ruby, Rails, HTML, CSS, jQuery)" target="_blank" rel="nofollow">
