--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
     <meta name="robots" content="index, follow">
     <!-- /SEO Tag's -->
 
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu:regular,bold' rel='stylesheet' type='text/css'>
-
     <!-- Stylesheet's' -->
     <link rel="stylesheet" href="public/stylesheets/reset.css">
     <link rel="stylesheet" href="public/stylesheets/main.css">
     <link rel="stylesheet" href="public/vendor/tipsy/stylesheets/tipsy.css">
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu:regular,bold' rel='stylesheet' type='text/css'>
     <!-- /Stylesheet's' -->
 
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->  
+
+    <meta name="google-site-verification" content="YGyPGyy2OfN2M65S-xZail89zGSbkAAF5Klv99POo6E" />
 </head>
 
   <body>
