added the google analytics code with this => http://mathiasbynens.be/notes/async-analytics-snippet optimization

--- a/index.html
+++ b/index.html
@@ -92,5 +92,10 @@
         $("#portfolio > ul > li > a").tipsy({fade: true, opacity: 1, gravity: 'nw'});
       });
     </script>
+
+    <script>var _gaq=[['_setAccount','UA-18689692-1'],['_trackPageview']];(function(d,t){
+var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+g.async=1;g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)
+}(document,'script'))</script>
   </body>
 </html>
