changed the geserv url

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <span class="pointer"></span>
         <ul>
           <li>
-            <a href="http://demo.osmaralves.com/geserv/" title="Geserv (Ruby, Rails, HTML, CSS, jQuery)" target="_blank" rel="nofollow">
+            <a href="http://geserv.osmaralves.com/" title="Geserv (Ruby, Rails, HTML, CSS, jQuery)" target="_blank" rel="nofollow">
               <img src="public/images/geserv.png" alt="Geserv">
             </a>
           </li>
