added borgges on portfolio

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->  
+    <![endif]-->
 
     <meta name="google-site-verification" content="YGyPGyy2OfN2M65S-xZail89zGSbkAAF5Klv99POo6E" />
 </head>
@@ -41,13 +41,13 @@
           <li><a href="http://twitter.com/osmarAlvesWeb" title="Twitter" target="_blank">Twitter</a></li>
         </ul>
       </nav>
-      
+
       <div id="portfolio">
         <span class="pointer"></span>
         <ul>
           <li>
-            <a href="http://geserv.osmaralves.com/" title="Geserv (Ruby, Rails, HTML, CSS, jQuery)" target="_blank" rel="nofollow">
-              <img src="public/images/geserv.png" alt="Geserv">
+            <a href="http://borgges.com/" title="Borgges (PHP, WordPress, HTML, CSS, jQuery)" target="_blank" rel="nofollow">
+              <img src="public/images/borgges.png" alt="Borgges">
             </a>
           </li>
 
