removed some things to test pagodabox

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="language" content="pt-br">
     <!-- /Compatibilidade -->
 
+    <meta name='robots' content='noindex,nofollow' />
+
     <!-- SEO Tag's -->
     <meta name="description" content="Desenvolvedor back-end (PHP, Ruby) e front-end (HTML,CSS e Javascript), entusiasta da simplicidade e perfeccionismo.">
     <meta name="keywords" content="desenvolvedor web, back-end, front-end, php, ruby, html, css, javascript, ruby on rails, rails, wordpress, jquery, sites, portais, sistemas">
@@ -92,10 +94,5 @@
         $("#portfolio > ul > li > a").tipsy({fade: true, opacity: 1, gravity: 'nw'});
       });
     </script>
-
-    <script>var _gaq=[['_setAccount','UA-18689692-1'],['_trackPageview']];(function(d,t){
-var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-g.async=1;g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)
-}(document,'script'))</script>
   </body>
 </html>
